Separate proto files for different services
