# v3/api/gen/beaconchain_api_v1.pb.gw.go
@@ -1,0 +1,166 @@
+// Code generated by protoc-gen-grpc-gateway. DO NOT EDIT.
+// source: beaconchain_api_v1.proto
+
+/*
+Package model is a reverse proxy.
+
+It translates gRPC into RESTful JSON APIs.
+*/
+package model
+
+import (
+	"context"
+	"errors"
+	"io"
+	"net/http"
+
+	"github.com/grpc-ecosystem/grpc-gateway/v2/runtime"
+	"github.com/grpc-ecosystem/grpc-gateway/v2/utilities"
+	"google.golang.org/grpc"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/grpclog"
+	"google.golang.org/grpc/metadata"
+	"google.golang.org/grpc/status"
+	"google.golang.org/protobuf/proto"
+)
+
+// Suppress "imported and not used" errors
+var (
+	_ codes.Code
+	_ io.Reader
+	_ status.Status
+	_ = errors.New
+	_ = runtime.String
+	_ = utilities.NewDoubleArray
+	_ = metadata.Join
+)
+
+func request_BeaconchainApiV1Service_ExecutionBlock_0(ctx context.Context, marshaler runtime.Marshaler, client BeaconchainApiV1ServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ExecutionBlockRequest
+		metadata runtime.ServerMetadata
+		err      error
+	)
+	val, ok := pathParams["blockNumber"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "blockNumber")
+	}
+	protoReq.BlockNumber, err = runtime.String(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "blockNumber", err)
+	}
+	msg, err := client.ExecutionBlock(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_BeaconchainApiV1Service_ExecutionBlock_0(ctx context.Context, marshaler runtime.Marshaler, server BeaconchainApiV1ServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ExecutionBlockRequest
+		metadata runtime.ServerMetadata
+		err      error
+	)
+	val, ok := pathParams["blockNumber"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "blockNumber")
+	}
+	protoReq.BlockNumber, err = runtime.String(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "blockNumber", err)
+	}
+	msg, err := server.ExecutionBlock(ctx, &protoReq)
+	return msg, metadata, err
+}
+
+// RegisterBeaconchainApiV1ServiceHandlerServer registers the http handlers for service BeaconchainApiV1Service to "mux".
+// UnaryRPC     :call BeaconchainApiV1ServiceServer directly.
+// StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
+// Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterBeaconchainApiV1ServiceHandlerFromEndpoint instead.
+// GRPC interceptors will not work for this type of registration. To use interceptors, you must use the "runtime.WithMiddlewares" option in the "runtime.NewServeMux" call.
+func RegisterBeaconchainApiV1ServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, server BeaconchainApiV1ServiceServer) error {
+	mux.Handle(http.MethodGet, pattern_BeaconchainApiV1Service_ExecutionBlock_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/.BeaconchainApiV1Service/ExecutionBlock", runtime.WithHTTPPathPattern("/api/v1/execution/block/{blockNumber}"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_BeaconchainApiV1Service_ExecutionBlock_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_BeaconchainApiV1Service_ExecutionBlock_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+
+	return nil
+}
+
+// RegisterBeaconchainApiV1ServiceHandlerFromEndpoint is same as RegisterBeaconchainApiV1ServiceHandler but
+// automatically dials to "endpoint" and closes the connection when "ctx" gets done.
+func RegisterBeaconchainApiV1ServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
+	conn, err := grpc.NewClient(endpoint, opts...)
+	if err != nil {
+		return err
+	}
+	defer func() {
+		if err != nil {
+			if cerr := conn.Close(); cerr != nil {
+				grpclog.Errorf("Failed to close conn to %s: %v", endpoint, cerr)
+			}
+			return
+		}
+		go func() {
+			<-ctx.Done()
+			if cerr := conn.Close(); cerr != nil {
+				grpclog.Errorf("Failed to close conn to %s: %v", endpoint, cerr)
+			}
+		}()
+	}()
+	return RegisterBeaconchainApiV1ServiceHandler(ctx, mux, conn)
+}
+
+// RegisterBeaconchainApiV1ServiceHandler registers the http handlers for service BeaconchainApiV1Service to "mux".
+// The handlers forward requests to the grpc endpoint over "conn".
+func RegisterBeaconchainApiV1ServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
+	return RegisterBeaconchainApiV1ServiceHandlerClient(ctx, mux, NewBeaconchainApiV1ServiceClient(conn))
+}
+
+// RegisterBeaconchainApiV1ServiceHandlerClient registers the http handlers for service BeaconchainApiV1Service
+// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "BeaconchainApiV1ServiceClient".
+// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "BeaconchainApiV1ServiceClient"
+// doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
+// "BeaconchainApiV1ServiceClient" to call the correct interceptors. This client ignores the HTTP middlewares.
+func RegisterBeaconchainApiV1ServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, client BeaconchainApiV1ServiceClient) error {
+	mux.Handle(http.MethodGet, pattern_BeaconchainApiV1Service_ExecutionBlock_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/.BeaconchainApiV1Service/ExecutionBlock", runtime.WithHTTPPathPattern("/api/v1/execution/block/{blockNumber}"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_BeaconchainApiV1Service_ExecutionBlock_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_BeaconchainApiV1Service_ExecutionBlock_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	return nil
+}
+
+var (
+	pattern_BeaconchainApiV1Service_ExecutionBlock_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"api", "v1", "execution", "block", "blockNumber"}, ""))
+)
+
+var (
+	forward_BeaconchainApiV1Service_ExecutionBlock_0 = runtime.ForwardResponseMessage
+)
