# v3/api/gen/beaconchain_api_v1_grpc.pb.go
@@ -1,0 +1,129 @@
+// For specification see
+// https://protobuf.dev/programming-guides/proto3/
+// https://protobuf.dev/reference/go/go-generated/
+// https://protobuf.dev/reference/python/python-generated/
+
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.5.1
+// - protoc             (unknown)
+// source: beaconchain_api_v1.proto
+
+package model
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	BeaconchainApiV1Service_ExecutionBlock_FullMethodName = "/BeaconchainApiV1Service/ExecutionBlock"
+)
+
+// BeaconchainApiV1ServiceClient is the client API for BeaconchainApiV1Service service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type BeaconchainApiV1ServiceClient interface {
+	// Get execution blocks by execution block number
+	ExecutionBlock(ctx context.Context, in *ExecutionBlockRequest, opts ...grpc.CallOption) (*ExecutionBlockResponse, error)
+}
+
+type beaconchainApiV1ServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewBeaconchainApiV1ServiceClient(cc grpc.ClientConnInterface) BeaconchainApiV1ServiceClient {
+	return &beaconchainApiV1ServiceClient{cc}
+}
+
+func (c *beaconchainApiV1ServiceClient) ExecutionBlock(ctx context.Context, in *ExecutionBlockRequest, opts ...grpc.CallOption) (*ExecutionBlockResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ExecutionBlockResponse)
+	err := c.cc.Invoke(ctx, BeaconchainApiV1Service_ExecutionBlock_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// BeaconchainApiV1ServiceServer is the server API for BeaconchainApiV1Service service.
+// All implementations must embed UnimplementedBeaconchainApiV1ServiceServer
+// for forward compatibility.
+type BeaconchainApiV1ServiceServer interface {
+	// Get execution blocks by execution block number
+	ExecutionBlock(context.Context, *ExecutionBlockRequest) (*ExecutionBlockResponse, error)
+	mustEmbedUnimplementedBeaconchainApiV1ServiceServer()
+}
+
+// UnimplementedBeaconchainApiV1ServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedBeaconchainApiV1ServiceServer struct{}
+
+func (UnimplementedBeaconchainApiV1ServiceServer) ExecutionBlock(context.Context, *ExecutionBlockRequest) (*ExecutionBlockResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ExecutionBlock not implemented")
+}
+func (UnimplementedBeaconchainApiV1ServiceServer) mustEmbedUnimplementedBeaconchainApiV1ServiceServer() {
+}
+func (UnimplementedBeaconchainApiV1ServiceServer) testEmbeddedByValue() {}
+
+// UnsafeBeaconchainApiV1ServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to BeaconchainApiV1ServiceServer will
+// result in compilation errors.
+type UnsafeBeaconchainApiV1ServiceServer interface {
+	mustEmbedUnimplementedBeaconchainApiV1ServiceServer()
+}
+
+func RegisterBeaconchainApiV1ServiceServer(s grpc.ServiceRegistrar, srv BeaconchainApiV1ServiceServer) {
+	// If the following call pancis, it indicates UnimplementedBeaconchainApiV1ServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&BeaconchainApiV1Service_ServiceDesc, srv)
+}
+
+func _BeaconchainApiV1Service_ExecutionBlock_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ExecutionBlockRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BeaconchainApiV1ServiceServer).ExecutionBlock(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: BeaconchainApiV1Service_ExecutionBlock_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BeaconchainApiV1ServiceServer).ExecutionBlock(ctx, req.(*ExecutionBlockRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// BeaconchainApiV1Service_ServiceDesc is the grpc.ServiceDesc for BeaconchainApiV1Service service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var BeaconchainApiV1Service_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "BeaconchainApiV1Service",
+	HandlerType: (*BeaconchainApiV1ServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "ExecutionBlock",
+			Handler:    _BeaconchainApiV1Service_ExecutionBlock_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "beaconchain_api_v1.proto",
+}
